# casc

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.md  Doxyfile.in  README.md  _c_a_s_c_functions_8h.html  _c_a_s_c_functions_8h.js  _c_a_s_c_functions_8h_source.html  _c_a_s_c_traversals_8h.html  _c_a_s_c_traversals_8h.js  _c_a_s_c_traversals_8h_source.html  _formulas.tex  _orientable_8h.html  _orientable_8h.js  _orientable_8h_source.html  _simplex_map_8h.html  _simplex_map_8h.js  _simplex_map_8h_source.html  _simplex_set_8h.html  _simplex_set_8h.js  _simplex_set_8h_source.html  _simplicial_complex_8h.html  _simplicial_complex_8h.js  _simplicial_complex_8h_source.html  annotated.html  annotated_dup.js  bitbucket-pipelines.yml  casc  classcasc_1_1simplicial__complex.html  classcasc_1_1simplicial__complex.js  classes.html  classindex__tracker_1_1index__tracker.html  classindex__tracker_1_1index__tracker.js  decimate_8h.html  decimate_8h.js  decimate_8h_source.html  dir_9d119566c6a490b501c215d306c4f78f.html  dir_9d119566c6a490b501c215d306c4f78f.js  dir_d44c64559bbebec7f509842c48db8b23.html  (+82 more)
.github/workflows/: ci.yaml
doc/: Doxyfile.in  FAQ.md  builddocs.md
docs/: CMakeLists.txt
examples/surfacemesh/include/: SurfaceMesh.h  Vertex.h  tensor.h
examples/surfacemesh/src/: OBJ_SurfaceMesh.C
include/: ASCFunctions.h  CASCFunctions.h  CASCTraversals.h  Orientable.h  SimplexMap.h  SimplexSet.h  SimplexSets.h  SimplicialComplex.h  SimplicialComplexFunctions.h  SimplicialComplexVisitors.h  SurfaceMesh.h  decimate.h  index_tracker.h  stringutil.h  typetraits.h  util.h
include/casc/: CASCFunctions.h  CASCTraversals.h  Orientable.h  SimplexMap.h  SimplexSet.h  SimplicialComplex.h  casc  decimate.h  index_tracker.h  stringutil.h  typetraits.h  util.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  (+45 more)
tests/: CASCTests.cpp  CMakeLists.txt  DecimationTests.cpp  FunctionsTests.cpp  IndexTrackerTests.cpp  OrientableTests.cpp  SimplexSetTests.cpp  TraversalTests.cpp  cascscratch.cpp  casctest.cpp  casctests.cpp  main.cpp  scratchtest.cpp
